--- a/app/templates/superuser/superuser_templates/base_superuser_template.html
+++ b/app/templates/superuser/superuser_templates/base_superuser_template.html
@@ -60,13 +60,13 @@
             </a>
           </li>
           <li>
-            <a class="nav-link" href="typography">
+            <a class="nav-link" href="/admin/analytics">
               <i class="fa fa-bar-chart" aria-hidden="true"></i>
               <p>Analytics</p>
             </a>
           </li>
           <li>
-            <a class="nav-link" href="icons">
+            <a class="nav-link" href="/superuser/users">
               <i class="fa fa-users" aria-hidden="true"></i>
               <p>Users</p>
             </a>
@@ -97,13 +97,19 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink"
                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <i class="fa fa-user"></i>&ensp;
+                  {% if current_user.is_authenticated %}
+                  {{ current_user.staff.first_name+' '+current_user.staff.last_name }}
+                  {% else %}
+                  User
+                  {% endif %}
+                  &ensp;<i class="fa fa-user"></i>&ensp;
 
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="#">Profile</a>
+                  <a class="dropdown-item" href="/admin/profile">Profile</a>
                   <div class="divider"></div>
-                  <a class="dropdown-item" href="{{ url_for('admin_logout_page') }}"><i class="fa fa-sign-out"></i>&ensp;Logout</a>
+                  <a class="dropdown-item" href="{{ url_for('admin_logout_page') }}"><i
+                      class="fa fa-sign-out"></i>&ensp;Logout</a>
                 </div>
               </li>
             </ul>
@@ -142,9 +148,40 @@
 <!--  Notifications Plugin    -->
 <script src="{{ url_for('static', filename='js/plugins/bootstrap-notify.js') }}"></script>
 <!-- Control Center for Light Bootstrap Dashboard: scripts for the example pages etc -->
-<script src="{{ url_for('static', filename='js/light-bootstrap-dashboard.js') }}"
-  type="text/javascript"></script>
+<script src="{{ url_for('static', filename='js/light-bootstrap-dashboard.js') }}" type="text/javascript"></script>
 <!-- Light Bootstrap Dashboard DEMO methods, don't include it in your project! -->
 <script src="{{ url_for('static', filename='js/demo.js') }}"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+crossorigin="anonymous"></script>
+<!-- Bootstrap core JavaScript-->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="{{ url_for('static', filename='js/bootbox/bootbox.min.js') }}"></script>
+<!-- Core plugin JavaScript-->
+<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
+<!-- Custom scripts for all pages-->
+<link type="text/css" rel="stylesheet" href="js/effects.css" />
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script type="jquery.js"></script>
+<!--incase you want to add javascript-->
+<!-- MDBootstrap Datatables  -->
+<script src="{{ url_for('static', filename='js/main.js') }}"></script>
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
+<script src="{{ url_for('static', filename='js/mindmup-editabletable.js') }}"></script>
+<script src="{{ url_for('static', filename='js/admin.js') }}"></script>
 </html>
