--- a/app/templates/superuser/users.html
+++ b/app/templates/superuser/users.html
@@ -1,121 +1,132 @@
 {% extends 'superuser/superuser_templates/base_superuser_template.html' %}
 
-{% block head %}
+{% block body %}
 <!-- Begin Page Content -->
-<div class="container-fluid">
-
-  <!-- Page Heading -->
-  <div class="d-sm-flex align-items-center justify-content-between mb-4">
-    <h1 class="h3 mb-0 text-gray-800">Dashboard <span style="font-size: 18px;">/Users</span></h1>
-    <h6 class="h6 mb-0 text-gray-600 mr-3">Time: <span id="time"></span></h6>
-  </div>
-  {% endblock %}
-
-  {% block body %}
-  <div class="row">
-    <div class="col-4">
-      <a data-toggle="modal" data-target="#exampleModalScrollable" class="btn btn-success btn-md active" role="button"
-        aria-pressed="true"><i class="fa fa-plus-circle"></i>&ensp;Add User</a>
-      <!-- Modal -->
-      <div class="modal fade" id="exampleModalScrollable" tabindex="-1" role="dialog"
-        aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalScrollableTitle">Add User</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
+<div class="content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-10">
+                <h4 style="margin-top: -10px">Users</h4>
             </div>
-            <form method="POST" id="form_add_admin">
-              <div class="modal-body">
-                {{ add_admin_form.hidden_tag() }}
-                <div class="row">
-                  {{ add_admin_form.firstname }}
-                </div><br>
-                <div class="row">
-                  {{ add_admin_form.lastname }}
-                </div><br>
-                <div class="row">
-                  {{ add_admin_form.email_address }}
-                </div><br>
-                <div class="row">
-                  {{ add_admin_form.role }}
+            <div class="col-2">
+                <div class="ml-4">
+                    <h5 style="color:#9A9A9A;">Time: <span id="time"></span></h5>
                 </div>
-              </div>
-              <div class="modal-footer">
-                {{ add_admin_form.submit }}
-              </div>
-            </form>
-          </div>
+            </div>
         </div>
-      </div>
-
-    </div>
-    <div class="col-4 offset-5">
-
-      <h6>Total Number: {{ admins_count }}</h6>
-    </div>
-    <div class="col-4"></div>
-  </div><br>
-
-  <table class="table table-striped table-hover paginate" style="display:block;overflow-y:scroll;text-align: center;">
-    <thead class="thead-dark">
-      <tr>
-        <th scope="col" width="3%">#</th>
-        <th scope="col" width="18%">Name</th>
-        <th scope="col" width="18%">Email Address</th>
-        <th scope="col" width="13%">Department</th>
-        <th scope="col" width="15%">Role</th>
-        <th scope="col" width="11%">User Status</th>
-        <th scope="col" width="30%"></th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for admin in admins %}
-      <tr>
-        <th scope="row" id="id{{ loop.index }}">{{ admin.id }}</th>
-        <td id="name{{ loop.index }}">{{ admin.first_name+' '+admin.last_name }}</td>
-        <td id="email{{ loop.index }}">{{ admin.email_address }}</td>
-        <td id="department{{ loop.index }}">{{ admin.department }}</td>
-        <td id="role{{ loop.index }}">{{ admin.role }}</td>
-        <td id="status{{ loop.index }}">{{ admin.user_status }}</td>
-        <td>
-          <a data-toggle="modal" data-target="#exampleModalScrollable{{ loop.index }}" class="btn btn-light btn-md active" role="button"
-        aria-pressed="true">Action&ensp;<i class="fa fa-caret-down" aria-hidden="true"></i></a>
-          <!-- Modal -->
-          <div class="modal fade" id="exampleModalScrollable{{ loop.index }}" tabindex="-1" role="dialog"
-            aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalScrollableTitle">Action</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <form method="POST" id="form_add_admin">
-                  <div class="modal-body">
-                    {{ admin_action_form.hidden_tag() }}
-                    <div class="d-flex justify-content-center"><i>Select an action to apply</i></div>
-                    <br>
-                    <div class="row">
-                      {{ admin_action_form.actions }}
+        <br>
+        <div class="row">
+            <a class="btn btn-success btn-fill btn-wd active ml-5" data-toggle="modal" data-target="#addUserModal">
+                <i class="fa fa-user-plus" aria-hidden="true"></i>&ensp;Add User
+            </a>
+        </div>
+        <div class="modal fade modal-mini modal-primary" id="addUserModal" tabindex="-1" role="dialog"
+            aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header justify-content-center">
+                        <div class="modal-profile">
+                            <i class="fa fa-user-plus" aria-hidden="true"></i>
+                        </div>
                     </div>
-                  </div>
-                  <div class="modal-footer">
-                    {{ admin_action_form.submit(id=admin.id ) }}
-                  </div>
-                </form>
-              </div>
+                    <div class="modal-body text-center">
+                        <p>Add User</p>
+                    </div>
+                    <form method="POST" id="form_add_admin">
+                        <div class="modal-body">
+                            {{ add_admin_form.hidden_tag() }}
+                            <div class="row">
+                                {{ add_admin_form.firstname }}
+                            </div><br>
+                            <div class="row">
+                                {{ add_admin_form.lastname }}
+                            </div><br>
+                            <div class="row">
+                                {{ add_admin_form.email_address }}
+                            </div><br>
+                            <div class="row">
+                                {{ add_admin_form.role }}
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <div class="row">
+                                <div class="col-6">
+                                    {{ add_admin_form.close }}
+                                </div>
+                                <div class="col-6">
+                                    {{ add_admin_form.submit }}
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
-          </div>
-          <button id="{{ admin.id }}" data_id="{{ admin.id }}" class="btn btn-danger btn-sm active deleteAdmin ml-5"
-            role="button" aria-pressed="true"><i class="fa fa-user-times"></i> Delete</button>
-        </td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-  <!-- Scroll to Top Button-->
-  {% endblock %}
+        </div>
+        <div class="col-md-12">
+            <div class="card card-plain table-plain-bg">
+                <div class="card-header ">
+                    <h4 class="card-title">User Management Console</h4>
+                    <p class="card-category">Administrators</p>
+                </div>
+                <div class="card-body table-full-width table-responsive">
+                    <table class="table table-hover">
+                        <thead>
+                            <th>ID</th>
+                            <th>Name</th>
+                            <th>Email Address</th>
+                            <th>Department</th>
+                            <th>User Status</th>
+                            <th></th>
+                            <th></th>
+                        </thead>
+                        <tbody>
+                            {% for admin in admins %}
+                            <tr>
+                                <td>{{ admin.id }}</td>
+                                <td>{{ admin.first_name+' '+admin.last_name }}</td>
+                                <td>{{ admin.email_address }}</td>
+                                <td>{{ admin.department }}</td>
+                                <td>{{ admin.user_status }}</td>
+                                <td>
+                                    <a class="btn btn-info btn-fill active btn-wd" data-toggle="modal" data-target="#adminActionModal{{ admin.id }}">
+                                        Action
+                                    </a>
+                                </td>
+                                <td>
+                                    <a class="btn btn-danger btn-fill btn-wd active deleteAdmin" id="{{ admin.id }}" data_id="{{ admin.id }}">
+                                        <i class="fa fa-user-times" aria-hidden="true"></i>&ensp;Delete
+                                    </a>
+                                </td>
+                            </tr>
+                            <div class="modal fade modal-mini modal-primary" id="adminActionModal{{ admin.id }}" tabindex="-1" role="dialog"
+                                aria-labelledby="myModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header justify-content-center">
+                                            <div class="modal-profile">
+                                                <i class="fa fa-user-circle" aria-hidden="true"></i>
+                                            </div>
+                                        </div>
+                                        <div class="modal-body text-center">
+                                            <p>Select an action to apply</p>
+                                            <br>
+                                            <div class="row">
+                                                {{ admin_action_form.actions }}
+                                            </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                            {{ admin_action_form.close }}
+                                            {{ admin_action_form.submit(id=admin.id ) }}        
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
