--- a/app/templates/admin/events.html
+++ b/app/templates/admin/events.html
@@ -22,70 +22,47 @@
             <div class="col-md-8 ml-auto mr-auto">
                 <div class="card">
                     <div class="header text-center">
-                        <h4 class="title">Light Bootstrap Dashboard PRO</h4>
-                        <p class="category">Are you looking for more components? Please check our
-                            Premium Version of Light Bootstrap Dashboard.</p>
+                        <h4 class="title">All Events</h4>
+                        <p class="category">Event Count: 23</p>
                         <br>
                     </div>
-                    <div class="content table-responsive table-upgrade">
+                    <div class="content table-responsive">
                         <table class="table">
                             <thead>
-                                <th></th>
-                                <th class="text-center">Free</th>
-                                <th class="text-center">PRO</th>
+                                <th class="text-center" width="35%">Event</th>
+                                <th class="text-center" width="30%">Date</th>
+                                <th class="text-center" width="15%">Sessions</th>
+                                <th width="20%"></th>
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>Components</td>
-                                    <td>16</td>
-                                    <td>115+</td>
-                                </tr>
-                                <tr>
-                                    <td>Plugins</td>
-                                    <td>4</td>
-                                    <td>14+</td>
-                                </tr>
-                                <tr>
-                                    <td>Example Pages</td>
-                                    <td>4</td>
-                                    <td>22+</td>
-                                </tr>
-                                <tr>
-                                    <td>Documentation</td>
-                                    <td><i class="fa fa-times text-danger"></i></td>
-                                    <td><i class="fa fa-check text-success"></td>
-                                </tr>
-                                <tr>
-                                    <td>SASS Files</td>
-                                    <td><i class="fa fa-times text-danger"></i></td>
-                                    <td><i class="fa fa-check text-success"></td>
-                                </tr>
-                                <tr>
-                                    <td>Login/Register/Lock Pages</td>
-                                    <td><i class="fa fa-times text-danger"></i></td>
-                                    <td><i class="fa fa-check text-success"></td>
-                                </tr>
-                                <tr>
-                                    <td>Premium Support</td>
-                                    <td><i class="fa fa-times text-danger"></i></td>
-                                    <td><i class="fa fa-check text-success"></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td>Free</td>
-                                    <td>Just $39</td>
-                                </tr>
-                                <tr class="last-row">
-                                    <td></td>
+                                    <td>Science Week</td>
+                                    <td>16/8/2023 - 20/8/2023</td>
+                                    <td>11</td>
                                     <td>
-                                        <a href="#" class="btn btn-round btn-fill btn-default disabled">Current
-                                            Version</a>
+                                        <a class="btn btn-default btn-fill active btn-round" href="/admin/event/3">
+                                            View Details
+                                        </a>
                                     </td>
+                                </tr>
+                                <tr>
+                                    <td>GLF: A New Vision for Earth</td>
+                                    <td>16/1/2023 - 20/1/2023</td>
+                                    <td>14</td>
                                     <td>
-                                        <a target="_blank"
-                                            href="http://www.creative-tim.com/product/light-bootstrap-dashboard-pro/?ref=lbdupgrade"
-                                            class="btn btn-round btn-fill btn-info">Upgrade to
-                                            PRO</a>
+                                        <a class="btn btn-default btn-fill active btn-round" href="/admin/event/3">
+                                            View Details
+                                        </a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Plant Breeding Conference</td>
+                                    <td>4/7/2023 - 20/7/2023</td>
+                                    <td>22</td>
+                                    <td>
+                                        <a class="btn btn-default btn-fill active btn-round" href="/admin/event/3">
+                                            View Details
+                                        </a>
                                     </td>
                                 </tr>
                             </tbody>
