--- a/app/templates/admin/registered_staff.html
+++ b/app/templates/admin/registered_staff.html
@@ -33,49 +33,32 @@
                                 <th>Email Address</th>
                                 <th>Department</th>
                                 <th>Events Registered</th>
+                                <th></th>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>1</td>
-                                    <td>Dakota Rice</td>
-                                    <td>$36,738</td>
-                                    <td>Niger</td>
-                                    <td>Oud-Turnhout</td>
+                                    <td>Samuel Mariwa</td>
+                                    <td>s.mariwa@cifor-icraf.org</td>
+                                    <td>ICT</td>
+                                    <td>3</td>
+                                    <td>
+                                        <a class="btn btn-info btn-fill btn-round active" href="/admin/staff/3">
+                                            View Details
+                                        </a>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td>2</td>
-                                    <td>Minerva Hooper</td>
-                                    <td>$23,789</td>
-                                    <td>Curaçao</td>
-                                    <td>Sinaai-Waas</td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td>Sage Rodriguez</td>
-                                    <td>$56,142</td>
-                                    <td>Netherlands</td>
-                                    <td>Baileux</td>
-                                </tr>
-                                <tr>
-                                    <td>4</td>
-                                    <td>Philip Chaney</td>
-                                    <td>$38,735</td>
-                                    <td>Korea, South</td>
-                                    <td>Overland Park</td>
-                                </tr>
-                                <tr>
-                                    <td>5</td>
-                                    <td>Doris Greene</td>
-                                    <td>$63,542</td>
-                                    <td>Malawi</td>
-                                    <td>Feldkirchen in Kärnten</td>
-                                </tr>
-                                <tr>
-                                    <td>6</td>
-                                    <td>Mason Porter</td>
-                                    <td>$78,615</td>
-                                    <td>Chile</td>
-                                    <td>Gloucester</td>
+                                    <td>Rosemary Kande</td>
+                                    <td>r.kande@cifor-icraf.org</td>
+                                    <td>Finance</td>
+                                    <td>11</td>
+                                    <td>
+                                        <a class="btn btn-info btn-fill active btn-round">
+                                            View Details
+                                        </a>
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
