--- a/app/templates/admin/registered_staff.html
+++ b/app/templates/admin/registered_staff.html
@@ -28,11 +28,11 @@
                     <div class="card-body table-full-width table-responsive">
                         <table class="table table-hover table-striped">
                             <thead>
-                                <th>ID</th>
+                                <th>#</th>
                                 <th>Name</th>
                                 <th>Email Address</th>
                                 <th>Department</th>
-                                <th>Events Registered</th>
+                                <th>Event Sessions Registered</th>
                                 <th></th>
                             </thead>
                             <tbody>
