--- a/app/templates/admin/staff.html
+++ b/app/templates/admin/staff.html
@@ -10,7 +10,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-10">
-                <h4 style="margin-top: -10px">Staff Event Details</h4>
+                <h4 style="margin-top: -10px">Registered Staff/ <span style="font-size: 80%;">Staff Event Details</span></h4>
             </div>
             <div class="col-2">
                 <div class="ml-4">
