--- a/app/templates/admin/admin_templates/base_admin_template.html
+++ b/app/templates/admin/admin_templates/base_admin_template.html
@@ -54,6 +54,12 @@
             </a>
           </li>
           <li>
+            <a class="nav-link" href="/admin/departments">
+              <i class="fa fa-sitemap" aria-hidden="true"></i>
+              <p>Departments</p>
+            </a>
+          </li>
+          <li>
             <a class="nav-link" href="/admin/registered_staff">
               <i class="fa fa-users" aria-hidden="true"></i>
               <p>Registered Staff</p>
@@ -145,5 +151,4 @@
 <script src="{{ url_for('static', filename='js/light-bootstrap-dashboard.js') }}" type="text/javascript"></script>
 <!-- Light Bootstrap Dashboard DEMO methods, don't include it in your project! -->
 <script src="{{ url_for('static', filename='js/demo.js') }}"></script>
-
 </html>
