--- a/app/templates/superuser/superuser_templates/base_superuser_template.html
+++ b/app/templates/superuser/superuser_templates/base_superuser_template.html
@@ -54,6 +54,12 @@
             </a>
           </li>
           <li>
+            <a class="nav-link" href="/admin/departments">
+              <i class="fa fa-sitemap" aria-hidden="true"></i>
+              <p>Departments</p>
+            </a>
+          </li>
+          <li>
             <a class="nav-link" href="/admin/registered_staff">
               <i class="fa fa-users" aria-hidden="true"></i>
               <p>Registered Staff</p>
@@ -153,12 +159,6 @@
 <script src="{{ url_for('static', filename='js/demo.js') }}"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 crossorigin="anonymous"></script>
 <!-- Bootstrap core JavaScript-->
 <script src="vendor/jquery/jquery.min.js"></script>
